--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "floorp/browser/locales/en-US"]
 	path = floorp/browser/locales/en-US
 	url = https://github.com/goastian/-midori-strings
+[submodule "l10n-central"]
+	path = l10n-central
+	url = https://github.com/goastian/l10n-central
+	branch = main
