--- a/.github/workflows/deployments.yml
+++ b/.github/workflows/deployments.yml
@@ -88,14 +88,14 @@ jobs:
     - uses: actions/download-artifact@v3
       name: Download artifact 📥
       with:
-        name: floorp-windows-x86_64-build-with-profgen-zstd
+        name: midori-windows-x86_64-build-with-profgen-zstd
         path: C:\artifact
 
     - name:  Unpack artifact
       run: |
         cd C:\artifact
-        zstd -d floorp-*.tar.zst
-        7z x floorp-*.tar
+        zstd -d midori-*.tar.zst
+        7z x midori-*.tar
 
     - uses: actions/checkout@v3
       name: Clone 🧬
@@ -112,13 +112,13 @@ jobs:
         echo "cd $workspace_dir" '' >> mozilla-build-run.sh
         echo 'export PATH=/c/mozilla-build/msys2/usr/bin:$PATH' '' >> mozilla-build-run.sh
         echo './mach --no-interactive bootstrap --application-choice browser' '' >> mozilla-build-run.sh
-        echo 'LLVM_PROFDATA=/c/Users/runneradmin/.mozbuild/clang/bin/llvm-profdata.exe JARLOG_FILE=en-US.log ./mach python build/pgo/profileserver.py --binary /c/artifact/floorp/floorp.exe' '' >> mozilla-build-run.sh
+        echo 'LLVM_PROFDATA=/c/Users/runneradmin/.mozbuild/clang/bin/llvm-profdata.exe JARLOG_FILE=en-US.log ./mach python build/pgo/profileserver.py --binary /c/artifact/midori/midori.exe' '' >> mozilla-build-run.sh
         C:\mozilla-build\start-shell.bat $workspace_dir\mozilla-build-run.sh
 
     - name: Publish 🎁
       uses: actions/upload-artifact@v3
       with:
-        name: floorp-windows-x86_64-profdata-and-jarlog
+        name: midori-windows-x86_64-profdata-and-jarlog
         path: |
           merged.profdata
           en-US.log
@@ -131,8 +131,8 @@ jobs:
       mar: true
       beta: false
       buildjet: ${{ inputs.buildjet }}
-      profdata_jarlog_artifact_name: "floorp-windows-x86_64-profdata-and-jarlog"
-      out_artifact_name: please-use-this-floorp-windows-x86_64-package-build-with-profdata-and-jarlog
+      profdata_jarlog_artifact_name: "midori-windows-x86_64-profdata-and-jarlog"
+      out_artifact_name: please-use-this-midori-windows-x86_64-package-build-with-profdata-and-jarlog
       MOZ_BUILD_DATE: ${{needs.get-buildid.outputs.buildids}}
       release-note-url: ${{ inputs.release-note-url }}
 
@@ -193,7 +193,7 @@ jobs:
         if: ${{ matrix.runs-on == 'self-hosted' }}
         run: |
           rm -rf ~/downloads/artifacts
-          rm -rf ./floorp
+          rm -rf ./midori
 
       - uses: actions/checkout@v3
         name: Clone 🧬
@@ -215,7 +215,7 @@ jobs:
         id: download-artifacts-mac-enable-profgen
         name: Download artifact 📥
         with:
-          name: floorp-mac-${{ env.ARCH_TYPE }}-build-with-profgen 
+          name: midori-mac-${{ env.ARCH_TYPE }}-build-with-profgen 
           path: ~/downloads/artifacts
 
       - name: setup environment 🌲
@@ -232,20 +232,20 @@ jobs:
 
       - name: Extract artifact 📂
         run: |
-          mkdir -p ./floorp
+          mkdir -p ./midori
           cp ${{ steps.download-artifacts-mac-enable-profgen.outputs.download-path }}/${ARCH_TYPE}-apple-darwin-output.tar.xz ./
           tar xf ${ARCH_TYPE}-apple-darwin-output.tar.xz
           
       - name: Generate Profdata 📊
         run: |
-          LLVM_PROFDATA=$RUNNER_USERDIR/.mozbuild/clang/bin/llvm-profdata JARLOG_FILE=en-US.log ./mach python build/pgo/profileserver.py --binary ./obj-${ARCH_TYPE}-apple-darwin/dist/floorp/Floorp.app/Contents/MacOS/floorp
+          LLVM_PROFDATA=$RUNNER_USERDIR/.mozbuild/clang/bin/llvm-profdata JARLOG_FILE=en-US.log ./mach python build/pgo/profileserver.py --binary ./obj-${ARCH_TYPE}-apple-darwin/dist/midori/Midori.app/Contents/MacOS/midori
         env:
           GHA_BUILD_MACHINE: ${{ matrix.runs-on }}
       
       - name: Publish 🎁
         uses: actions/upload-artifact@v3
         with:
-          name: floorp-${{ env.ARCH_TYPE }}-apple-darwin-profdata-and-jarlog
+          name: midori-${{ env.ARCH_TYPE }}-apple-darwin-profdata-and-jarlog
           path: |
             merged.profdata
             en-US.log
@@ -268,8 +268,8 @@ jobs:
     with:
       beta: false
       mar: true
-      x86_64_artifact_name: floorp-mac-x86_64-package
-      aarch64_artifact_name: floorp-mac-aarch64-package
+      x86_64_artifact_name: midori-mac-x86_64-package
+      aarch64_artifact_name: midori-mac-aarch64-package
       display_version: ${{needs.get-display-version.outputs.display-version}} 
       inside_version: ${{needs.get-inside-version.outputs.inside-version}}
       MOZ_BUILD_DATE: ${{needs.get-buildid.outputs.buildids}}
@@ -307,19 +307,19 @@ jobs:
     - name: download Linux x86_64 build artifact 📥
       uses: actions/download-artifact@v3
       with:
-        name: floorp-linux-x64
+        name: midori-linux-x64
         path: ~/downloads/artifacts/linux-x64
 
     - name: download Linux aarch64 build artifact 📥
       uses: actions/download-artifact@v3
       with:
-        name: floorp-linux-aarch64
+        name: midori-linux-aarch64
         path: ~/downloads/artifacts/linux-aarch64
 
     - name: download Windows x86_64 build artifact📥
       uses: actions/download-artifact@v3
       with:
-        name: please-use-this-floorp-windows-x86_64-package-build-with-profdata-and-jarlog
+        name: please-use-this-midori-windows-x86_64-package-build-with-profdata-and-jarlog
         path: ~/downloads/artifacts/windows-x64
 
     - name: download macOS Universal build artifact📥
@@ -345,10 +345,10 @@ jobs:
           /home/runner/downloads/artifacts/linux-aarch64/LINUX-aarch64.mar
           /home/runner/downloads/artifacts/windows-x64/WINNT-x86_64.mar
           /home/runner/downloads/artifacts/macOS-x64/DARWIN-Universal.mar
-          /home/runner/downloads/artifacts/linux-x64/floorp-*.linux-x86_64.tar.bz2
-          /home/runner/downloads/artifacts/linux-aarch64/floorp-*.linux-aarch64.tar.bz2
-          /home/runner/downloads/artifacts/windows-x64/floorp-win64.installer.exe
-          /home/runner/downloads/artifacts/macOS-x64/floorp-macOS-universal.dmg
+          /home/runner/downloads/artifacts/linux-x64/midori-*.linux-x86_64.tar.bz2
+          /home/runner/downloads/artifacts/linux-aarch64/midori-*.linux-aarch64.tar.bz2
+          /home/runner/downloads/artifacts/windows-x64/midori-win64.installer.exe
+          /home/runner/downloads/artifacts/macOS-x64/midori-macOS-universal.dmg
         tag_name: "v${{ needs.get-display-version.outputs.display-version }}"
         name: "v${{ needs.get-display-version.outputs.display-version }}"
         draft: false
@@ -364,7 +364,7 @@ jobs:
       name: Deploy-to-updater-release
 
     steps:
-    - name: Run GitHub Actions for Release x86_64 Linux MAR "Floorp-Projects/Floorp-Update" 🚀
+    - name: Run GitHub Actions for Release x86_64 Linux MAR "Midori-Projects/Midori-Update" 🚀
       run: |
         echo "Preparing to run GitHub Actions for Release x86_64 Windows MAR, waiting for 30 seconds"
         sleep 60
