--- a/.github/workflows/daily-build-with-update.yml
+++ b/.github/workflows/daily-build-with-update.yml
@@ -21,6 +21,8 @@ on:
 #----------------------------------------- JOBS -----------------------------------------#
 jobs:
   get-display-version:
+  ## only run this job if the repository owner is goastian . This is to prevent forks from running this job.
+    if: github.repository_owner == 'goastian'
     runs-on: ubuntu-latest
     outputs:
       display-version: ${{ steps.get.outputs.display-version }}
