--- a/.github/workflows/linux-x64-deb.yml
+++ b/.github/workflows/linux-x64-deb.yml
@@ -74,7 +74,7 @@ jobs:
         cd DEBIAN
         chmod +x postinst postrm preinst prerm
         cd ../usr/lib/midori
-        chmod +x midori midori-bin midori.sh lib*.so plugin-container gmp-clearkey/0.1/libclearkey.so
+        chmod +x midori midori-bin glxtest vaapitest midori.sh lib*.so plugin-container gmp-clearkey/0.1/libclearkey.so
         sudo chown -R root:root $DEBWORK
         cd $WORKDIR
         sudo dpkg-deb -b $DEBWORK
