--- a/.github/workflows/pull-upstream.yml
+++ b/.github/workflows/pull-upstream.yml
@@ -3,7 +3,7 @@
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
 # Please write our copyright if you use this file.
-# © 2023 Floorp Projects & Contributors
+# © 2023 Midori Projects & Contributors
 
 name: "(U) 🧰 Pull upstream"
 
@@ -43,16 +43,16 @@ jobs:
         git rev-list --count origin/bookmarks/esr115
         git checkout -b upstream-esr115-${DATE_STR} origin/bookmarks/esr115
 
-    - name: Fetch Floorp 📥
+    - name: Fetch Midori 📥
       run: |
         cd mozilla-unified
-        git remote add floorp https://${GITHUB_ACTOR}:${{ github.token }}@github.com/${{ github.repository }}
-        git fetch floorp
+        git remote add midori https://${GITHUB_ACTOR}:${{ github.token }}@github.com/${{ github.repository }}
+        git fetch midori
 
     - name: Push 🎁
       run: |
         cd mozilla-unified
-        git push floorp upstream-esr115-${DATE_STR}
+        git push midori upstream-esr115-${DATE_STR}
 
     - name: Create Pull Request
       run: |
