--- a/.github/workflows/macOS-integration.yml
+++ b/.github/workflows/macOS-integration.yml
@@ -87,10 +87,12 @@ jobs:
    Integration:
     runs-on: macos-latest
     steps:
-        - uses: actions/checkout@v3
+        - name: Clone 📥
+          uses: actions/checkout@v3
+
           with:
-            ref: ESR115
-    
+            submodules: 'recursive'
+
         - name: download M1 build artifact 📥
           uses: actions/download-artifact@v3
           with:
