--- a/.github/workflows/pull-upstream.yml
+++ b/.github/workflows/pull-upstream.yml
@@ -46,13 +46,17 @@ jobs:
     - name: Fetch Midori 📥
       run: |
         cd mozilla-unified
-        git remote add midori-desktop https://${GITHUB_ACTOR}:${{ github.token }}@github.com/${{ github.repository }}
-        git fetch midori-desktop
+        git remote add midori https://${GITHUB_ACTOR}:${{ github.token }}@github.com/${{ github.repository }}
+        git fetch midori
+
+    - name: Wait for Midori to be ready
+      run: |
+        sleep 30
 
     - name: Push 🎁
       run: |
         cd mozilla-unified
-        git push midori-desktop upstream-esr115-${DATE_STR}
+        git push midori upstream-esr115-${DATE_STR}
 
     - name: Create Pull Request
       run: |
