--- a/.github/workflows/pull-upstream.yml
+++ b/.github/workflows/pull-upstream.yml
@@ -12,7 +12,7 @@ on: workflow_dispatch
 jobs:
   pull-upstream:
     name: Pull upstream
-    runs-on: ubuntu-latest
+    runs-on: midori
 
     steps:
     - name: Setup 🪛
