--- a/floorp/browser/components/search/extensions/bing/manifest.json
+++ b/floorp/browser/components/search/extensions/bing/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Bing (Recommended)",
+  "name": "Bing",
   "description": "Microsoft Bing",
   "manifest_version": 2,
   "version": "1.3",
@@ -18,7 +18,7 @@
   "chrome_settings_overrides": {
     "search_provider": {
       "keyword": "@bing",
-      "name": "Bing (Recommended)",
+      "name": "Bing",
       "search_url": "https://www.bing.com/search",
       "search_form": "https://www.bing.com/search?pc=MOZI&q={searchTerms}",
       "search_url_get_params": "pc=MOZI&q={searchTerms}",
